# xfce4-cava-plugin

./: README.md  TODO  meson.build
icons/: meson.build
panel-plugin/: cava.c  cava.desktop.in  dialogs.c  dialogs.h  meson.build  plugin.c  plugin.h
